--- a/.insomnia/Request/req_ca7fa2495bda414da77b61ebc216d69b.yml
+++ b/.insomnia/Request/req_ca7fa2495bda414da77b61ebc216d69b.yml
@@ -1,15 +1,23 @@
 _id: req_ca7fa2495bda414da77b61ebc216d69b
 type: Request
 parentId: fld_a8fe1f1a73994a199db48fbefae22043
-modified: 1614083737712
+modified: 1615237949598
 created: 1614083707332
 url: https://curly.kekamaps.com/api/account/otp?phoneNumber=+994517000543
 name: get token second
 description: ""
 method: POST
-body: {}
+body:
+  mimeType: application/json
+  text: |-
+    {
+    	"salam": "123"
+    }
 parameters: []
-headers: []
+headers:
+  - name: Content-Type
+    value: application/json
+    id: pair_6ad080995d604b418a961a432acaad14
 authentication: {}
 metaSortKey: -1614083707332
 isPrivate: false
