--- a/.insomnia/Request/req_b01b1dbad5754aac982bad237743130f.yml
+++ b/.insomnia/Request/req_b01b1dbad5754aac982bad237743130f.yml
@@ -1,17 +1,17 @@
-_id: req_70cf5e35e8ae42749930d33263a61acd
+_id: req_b01b1dbad5754aac982bad237743130f
 type: Request
-parentId: wrk_f9c0ac1363ad4657877993a0cc62c16a
-modified: 1614718437483
-created: 1614269470104
-url: http://localhost:3000
-name: hack
+parentId: fld_ea30190487674905be403742cac5ee2e
+modified: 1616103957705
+created: 1616103942267
+url: https://id.fonibo.com/.well-known/openid-configuration
+name: well-known
 description: ""
 method: GET
 body: {}
 parameters: []
 headers: []
 authentication: {}
-metaSortKey: -1614269470104
+metaSortKey: -1616103942267
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
