--- a/.insomnia/Request/req_2632e7ffc7af4746810ba7547907ebec.yml
+++ b/.insomnia/Request/req_2632e7ffc7af4746810ba7547907ebec.yml
@@ -1,25 +1,26 @@
-_id: req_f446d43bd9de4df598b6d3b93b61c9bc
+_id: req_2632e7ffc7af4746810ba7547907ebec
 type: Request
-parentId: fld_42702b4d3b6644a29c56881503d260cc
-modified: 1616431031814
-created: 1610909129965
-url: https://merchant-connect-v1.fonibo.com/stores/2/webhooks
-name: "scratch "
+parentId: wrk_f9c0ac1363ad4657877993a0cc62c16a
+modified: 1619462616114
+created: 1619462580478
+url: http://localhost:5000/accounts/register
+name: meetings register
 description: ""
 method: POST
 body:
   mimeType: application/json
   text: |-
     {
-    	"url": "https://api.posbox.app/"
+    	"email": "xanish@gmail.com",
+    	"password": "xanish12345"
     }
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
-    id: pair_336bb95936cf4f5b916c18c8f1a520c5
+    id: pair_1a44b47c00194b40952b79087834522e
 authentication: {}
-metaSortKey: -1610909129966
+metaSortKey: -1619462580478
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
