--- a/.insomnia/Request/req_59db15933f594ea093ac666c036edaff.yml
+++ b/.insomnia/Request/req_59db15933f594ea093ac666c036edaff.yml
@@ -1,25 +1,26 @@
-_id: req_f446d43bd9de4df598b6d3b93b61c9bc
+_id: req_59db15933f594ea093ac666c036edaff
 type: Request
-parentId: fld_42702b4d3b6644a29c56881503d260cc
-modified: 1616431031814
-created: 1610909129965
-url: https://merchant-connect-v1.fonibo.com/stores/2/webhooks
-name: "scratch "
+parentId: fld_ea30190487674905be403742cac5ee2e
+modified: 1616492098784
+created: 1616047890067
+url: http://localhost:5000/fonibo/orders
+name: fonibo webhook mock
 description: ""
 method: POST
 body:
   mimeType: application/json
   text: |-
     {
-    	"url": "https://api.posbox.app/"
+    	"orderId": "bbf0e82b-af12-4a3c-958b-e0267bbaf49e",
+    	"storeId": "2"
     }
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
-    id: pair_336bb95936cf4f5b916c18c8f1a520c5
+    id: pair_d214e6a0721e4476b85d2acf335132fd
 authentication: {}
-metaSortKey: -1610909129966
+metaSortKey: -1616047890067
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
