--- a/.insomnia/Request/req_8bb3f8390a194c64bf173476a808e34b.yml
+++ b/.insomnia/Request/req_8bb3f8390a194c64bf173476a808e34b.yml
@@ -1,25 +1,26 @@
-_id: req_f446d43bd9de4df598b6d3b93b61c9bc
+_id: req_8bb3f8390a194c64bf173476a808e34b
 type: Request
-parentId: fld_42702b4d3b6644a29c56881503d260cc
-modified: 1616431031814
-created: 1610909129965
-url: https://merchant-connect-v1.fonibo.com/stores/2/webhooks
-name: "scratch "
+parentId: wrk_f9c0ac1363ad4657877993a0cc62c16a
+modified: 1619462110739
+created: 1619461957895
+url: http://localhost:5000/accounts/login
+name: meeting login
 description: ""
 method: POST
 body:
   mimeType: application/json
   text: |-
     {
-    	"url": "https://api.posbox.app/"
+    	"email": "alvan@gmail.com",
+    	"password": "alvan12345"
     }
 parameters: []
 headers:
   - name: Content-Type
     value: application/json
-    id: pair_336bb95936cf4f5b916c18c8f1a520c5
+    id: pair_fa710aa7bb114006a22272a4b96f7dce
 authentication: {}
-metaSortKey: -1610909129966
+metaSortKey: -1619461957896
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
